--- a/static-page/index.html
+++ b/static-page/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>testing</h1>
+    <h1>Our Menu</h1>
+    <div class="container">
+      <div class="box col-lg-4 col-md-6 margin-md">
+        <div class="title" id="chicken">Chicken</div>
+        <p class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe maxime
+          ad repellat, unde ipsa repudiandae temporibus praesentium vitae
+          perspiciatis dolorum. Sunt fuga sapiente hic animi ducimus error
+          reiciendis maxime perspiciatis.
+        </p>
+      </div>
+      <div class="box col-lg-4 col-md-6">
+        <div class="title" id="b">Beef</div>
+        <p class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe maxime
+          ad repellat, unde ipsa repudiandae temporibus praesentium vitae
+          perspiciatis dolorum. Sunt fuga sapiente hic animi ducimus error
+          reiciendis maxime perspiciatis.
+        </p>
+      </div>
+      <div class="box col-lg-4 col-md-12">
+        <div class="title" id="sushi">Sushi</div>
+        <p class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe maxime
+          ad repellat, unde ipsa repudiandae temporibus praesentium vitae
+          perspiciatis dolorum. Sunt fuga sapiente hic animi ducimus error
+          reiciendis maxime perspiciatis.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
